--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="chat-box" id="chatBox"></div>
     <div class="chat-input">
       <input type="text" id="userInput" placeholder="Type a message..." />
-      <button onclick="sendMessage()">Send</button>
+      <button onclick="sendMessage()">hii</button>
     </div>
   </div>
   <script src="assets/js/app.js"></script>
