--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="chat-header">Pingory Messenger</header>
     <div class="chat-box" id="chatBox"></div>
     <div class="chat-input">
-      <input type="text" id="userInput" placeholder="Type a amit..." />
-      <button onclick="sendMessage()">hii</button>
+      <input type="text" id="userInput" placeholder="Type a any..." />
+      <button onclick="sendMessage()"><b>SENDi</b></button>
     </div>
   </div>
   <script src="assets/js/app.js"></script>
