--- a/index.html
+++ b/index.html
@@ -1,59 +1,106 @@
- 1 <!DOCTYPE html>
- 2 <html lang="en">
- 3 <head>
- 4     <meta charset="UTF-8" />
- 5     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 6     <title>Chats - ProChat</title>
- 7     <link rel="stylesheet" href="assets/css/style.css" />
- 8     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
- 9     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
-10 </head>
-11 <body>
-12     <div class="container">
-13         <header class="header">
-14             <button class="hamburger" onclick="toggleSidebar()"><i class="fas fa-bars"></i></button>
-15             <h1>Chats</h1>
-16             <a href="profile.html" class="profile-link"><i class="fas fa-user"></i> Profile</a>
-17         </header>
-18
-19         <div class="sidebar-overlay" id="sidebarOverlay" onclick="toggleSidebar()"></div>
-20         <aside class="sidebar" id="sidebar">
-21             <div class="profile-section">
-22                 <div class="avatar-container">
-23                     <img src="assets/images/default-avatar.png" alt="Avatar" class="profile-pic" id="sidebarAvatar">
-24                     <span id="sidebarStatus" class="status-dot online"></span>
-25                 </div>
-26                 <span class="profile-name" id="sidebarName">Amit Kumar</span>
-27             </div>
-28             <div class="theme-selector">
-29                 <h3>Theme</h3>
-30                 <select id="themeSelect" onchange="changeTheme()">
-31                     <option value="default">Default</option>
-32                     <option value="dark">Dark</option>
-33                     <option value="light">Light</option>
-34                 </select>
-35             </div>
-36             <nav>
-37                 <ul>
-38                     <li><a href="#" class="active">Chats</a></li>
-39                     <li><a href="profile.html">Profile</a></li>
-40                     <li><a href="#" onclick="logout()">Logout</a></li>
-41                 </ul>
-42             </nav>
-43         </aside>
-44
-45         <main class="chat-container">
-46             <div class="search-bar">
-47                 <i class="fas fa-search"></i>
-48                 <input type="text" id="searchInput" placeholder="Search chats..." oninput="filterChats()" />
-49             </div>
-50             <div class="chat-list" id="chatList">
-51                 <!-- Sample chats populated by JS -->
-52             </div>
-53         </main>
-54     </div>
-55
-56     <script src="assets/js/main.js"></script>
-57 </body>
-58 </html>
-59
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Chat app with Grok-like UI, multimedia, and advanced interactions">
+  <title>Chat Application</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <button id="hamburger" aria-label="Toggle sidebar">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
+    <select id="chatModule" aria-label="Select chat module">
+      <option value="grok">Grok</option>
+      <option value="chatgpt">ChatGPT</option>
+      <option value="mock">Mock Bot</option>
+    </select>
+    <div id="menuDots" role="button" aria-label="Toggle menu" aria-expanded="false">
+      <span>⋮</span>
+      <div id="dropdown" class="dropdown-content" role="menu">
+        <button role="menuitem" data-action="clear">Clear</button>
+        <button role="menuitem" data-action="share">Share</button>
+        <button role="menuitem" data-action="screenshot">Screenshot</button>
+      </div>
+    </div>
+  </header>
+
+  <aside id="mySidebar" class="sidebar" aria-label="Saved chats sidebar">
+    <div class="sidebar-header">
+      <button id="closeSidebar" aria-label="Close sidebar">
+        <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+          <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+        </svg>
+      </button>
+      <input type="text" id="chatSearch" placeholder="Search chats..." aria-label="Search chats">
+      <button id="notebookIcon" aria-label="Create new chat">
+        <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+          <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/>
+        </svg>
+      </button>
+    </div>
+    <div id="savedChats" role="list"></div>
+    <div class="sidebar-footer">
+      <button id="profileBtn" aria-label="View profile">👤</button>
+      <button id="settingsBtn" aria-label="Open settings">⚙️</button>
+    </div>
+    <div id="chatContextMenu" class="context-menu" role="menu" hidden>
+      <button role="menuitem" data-action="pinChat">Pin 📌</button>
+      <button role="menuitem" data-action="renameChat">Rename ✍️</button>
+      <button role="menuitem" data-action="deleteChat">Delete 🗑️</button>
+    </div>
+  </aside>
+
+  <main>
+    <section id="chat_area" class="chat-area" aria-live="polite">
+      <div class="chat-placeholder" aria-hidden="true">Start a new chat or select a saved one...</div>
+    </section>
+    <div id="messageContextMenu" class="context-menu" role="menu" hidden>
+      <button role="menuitem" data-action="like">Like 👍</button>
+      <button role="menuitem" data-action="unlike">Unlike 👎</button>
+      <button role="menuitem" data-action="heart">Heart ❤️</button>
+      <button role="menuitem" data-action="pin">Pin 📌</button>
+      <button role="menuitem" data-action="delete">Delete 🗑️</button>
+    </div>
+  </main>
+
+  <footer>
+    <form id="input_chat" aria-label="Chat input form">
+      <div class="input-container">
+        <textarea
+          id="user_input"
+          placeholder="Ask anything..."
+          aria-label="Message input"
+          rows="1"
+          maxlength="1000"
+        ></textarea>
+        <div class="input-actions">
+          <label for="image_upload" class="action-btn" aria-label="Upload image">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+              <path d="M4 4h16v12l-6-6-4 4-4-4-2 2V4m0-2H2v16h20V2H4z"/>
+            </svg>
+          </label>
+          <input type="file" id="image_upload" accept="image/*" multiple hidden>
+          <button type="button" id="voice_btn" class="action-btn" aria-label="Record voice">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+              <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3zm-1-9c0-.55.45-1 1-1s1 .45 1 1v6c0 .55-.45 1-1 1s-1-.45-1-1V5zm6 6c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.47 6 6.93V21h2v-2.07c3.39-.46 6-3.4 6-6.93h-2z"/>
+            </svg>
+          </button>
+          <button type="submit" id="submit_btn" aria-label="Send message">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+              <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div id="recordingTimer" class="recording-timer" hidden>00:00</div>
+    </form>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
